--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -96,3 +96,8 @@ mat-card > span:hover {
   text-decoration: underline;
   cursor: pointer;
 }
+
+.selected {
+  background-color: rgb(63, 81, 181);
+  color: white;
+}
